add: pytorch finetuning convnext_tiny to train the imagewoof dataset NOK

--- a/NB07-0224/NB07-0224-1.0.0-Imagewoof-ConvNeXtTiny.ipynb
+++ b/NB07-0224/NB07-0224-1.0.0-Imagewoof-ConvNeXtTiny.ipynb
@@ -476,6 +476,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a39f057f-3847-4d6e-93ea-fa83aae9b6dd",
+   "metadata": {},
+   "source": [
+    "**CHECK THIS LINK!**\n",
+    "\n",
+    "https://discuss.pytorch.org/t/how-to-perform-finetuning-in-pytorch/419/8"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "5f56809e-eec9-4ea3-8c65-ee8c6e141543",
