edit: function to display images

--- a/NB04-0124/NB04-0124-3.0.0-Imagenewoof-ConvNeXtTiny.ipynb
+++ b/NB04-0124/NB04-0124-3.0.0-Imagenewoof-ConvNeXtTiny.ipynb
@@ -672,7 +672,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "2de81458-649b-41ea-bc76-a940d6bcb53a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
