add: dcgan testing with pytorch

--- a/NB10-0724/NB10-0724-1.0.0-DCGAN.ipynb
+++ b/NB10-0724/NB10-0724-1.0.0-DCGAN.ipynb
@@ -5,7 +5,7 @@
    "id": "6dedd51d-09b3-4b40-b0f7-756d52603ecc",
    "metadata": {},
    "source": [
-    "## DCGAN Tutorial"
+    "## DCGAN: TRM-UAP Development"
    ]
   },
   {
@@ -457,7 +457,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "3c4c2451-f90e-466f-af70-0c51413e86d4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
