--- a/NB09-0724/NB09-0724-1.0.0-PerturbationShowcase.ipynb
+++ b/NB09-0724/NB09-0724-1.0.0-PerturbationShowcase.ipynb
@@ -284,9 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -467,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -481,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
